address deprecation warnings